--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,10 @@
     margin: 0 auto;
 }
 
+.color-red {
+    color: red;
+}
+
 /* Header */
 
 header {
@@ -50,6 +54,10 @@ main {
     padding-top: 100px;
 }
 
+img {
+    max-width: 100%;
+}
+
 .cards {
     flex-wrap: wrap;
     gap: 10px;
@@ -59,8 +67,9 @@ main {
     width: calc(100% / 3 - (20px / 3));
     position: relative;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
-img {
-    max-width: 100%;
+.card-description {
+   font-size: 10px; 
 }
