--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,7 @@ header {
     position: fixed;
     background-color: #ff6900;
     width: 100%;
+    z-index: 3;
 }
 
 .navbar {
@@ -69,9 +70,12 @@ img {
 
 .card {
     width: calc(100% / 3 - (20px / 3));
-    position: relative;
     cursor: pointer;
     margin-bottom: 20px;
+}
+
+.card-img-and-label {
+    position:relative
 }
 
 .card-description {
@@ -97,6 +101,10 @@ img {
     display: none;
 }
 
+.nohover-img {
+    display: block;
+}
+
 .card:hover .nohover-img {
     display: none;
 }
@@ -107,34 +115,25 @@ img {
 
 /* Etichette sconti e sostenibilità */
 
-.discount-label {
+.label {
     position: absolute;
-    bottom: 60px;
+    bottom: 30px;
     left: 0;
-    font-size: 10px;
-    padding: 3px 6px;
+    gap: 5px;
+}
+
+.discount-label {
     background-color: red;
     color: white;
+    font-size: 10px;
+    padding: 3px 6px;
 }
 
 .sostenibilita-label {
-    position: absolute;
-    bottom: 60px;
-    left: 37px;
-    font-size: 10px;
-    padding: 3px 6px;
     background-color: green;
     color: white;
-}
-
-.sostenibilita-single-label {
-    position: absolute;
-    bottom: 60px;
-    left: 0;
     font-size: 10px;
     padding: 3px 6px;
-    background-color: green;
-    color: white;
 }
 
 
